<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backrepeat"
    android:id="@+id/LayoutAbout"
    >
<TextView android:text="@string/app_name"
			android:id="@+id/AboutText01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/commonText"
			></TextView>
<TextView android:text="@string/version"
			android:id="@+id/AboutText02"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/commonText"
			></TextView>

   
<TextView android:text="@string/aboutText"
			android:id="@+id/AboutText03"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/commonText"
			></TextView>

<TextView android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:text="@string/linkHome"
    android:autoLink="web" android:id="@+id/AboutText04"
    android:layout_centerInParent="true"
    android:linksClickable="true"></TextView>

<TextView android:text="@string/aboutText2"
			android:id="@+id/AboutText04"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/commonText"
			></TextView>
   
<Button android:text="@string/feedbackText"
		android:id="@+id/btnFeedback"
		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignParentBottom="true"
		android:onClick="FeedbackClick"
/>

<Button android:text="@string/aboutText3"
		android:id="@+id/btnUserManual"
		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignParentBottom="true"
		android:onClick="UserManualClick"
/>

</LinearLayout>