<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="305dp"
    android:background="@color/commonBackground"
    android:id="@+id/LayoutMedicationsInput"
    >

<TextView android:text="@string/txtStartDate"
			android:id="@+id/StartDateText01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/commonText"
			></TextView>
			
<EditText android:id="@+id/edtInputMedStartDateDetail" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:width="294dp"
			android:height="40dp"
			android:gravity="top"
			>
			</EditText>

<TextView android:text="@string/txtEndDate"
			android:id="@+id/EndDateText02"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/commonText"
			></TextView>
<EditText android:id="@+id/edtInputMedEndDateDetail" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:width="294dp"
			android:height="40dp"
			android:gravity="top"
			>
			</EditText>

<TextView android:text="@string/txtMedicationDetail"
			android:id="@+id/MedText01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/commonText"
			></TextView>			
<EditText android:id="@+id/edtInputMedicationsDetail" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:width="294dp"
			android:height="140dp"
			android:gravity="top"
			>
			</EditText>
 <TextView android:text="@string/txtAdverseDetail"
			android:id="@+id/AdverseText01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/commonText"
			></TextView>
<EditText android:id="@+id/edtInputAdverseDetail" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:width="294dp"
			android:height="140dp"
			android:gravity="top"
			>
			</EditText>

<RelativeLayout android:id="@+id/RelativeLayout01"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content">

<Button android:text="@string/buttonSave" 
		android:id="@+id/btnSaveMedications" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:height="25dp"
		android:width="145dp"
		></Button>
<Button android:text="@string/buttonDelete" 
		android:id="@+id/btnDeleteMedications" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_toRightOf="@id/btnSaveMedications"
		android:layout_alignTop="@id/btnSaveMedications"
		android:height="25dp"
		android:width="145dp"
		></Button>

</RelativeLayout>
</LinearLayout>
</ScrollView>