<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/backrepeat"
    android:id="@+id/LayoutStartup"
    >
	
	<TextView android:text="@string/enteryourpassword"
			android:id="@+id/txtEnterPassword"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/commonText"
			></TextView>
	
	<EditText android:id="@+id/edtPasswordVerify"
		android:password="true"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical|center_horizontal"
	/>
	
	<Button android:text="@string/go"
		android:id="@+id/btnVerifyPassword"
		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignParentBottom="true"
		android:onClick="VerifyPassword"
	/>
	
	<Button android:text="@string/forgotpassword"
		android:id="@+id/btnForgotPassword"
		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignParentBottom="true"
		android:onClick="ForgotPassword"
	/>

</LinearLayout>